--- a/templates/header.html
+++ b/templates/header.html
@@ -28,17 +28,17 @@
                 <li class="menu-item-has-children"><a href="#">Услуги</a>
                   <ul class="submenu">
                     <li>
-                      <a href="{% url 'createlanding' %}">Создание сайтов</a>
+                      <a href="{% url 'createlanding' %}">Разработка сайтов</a>
                     </li>
                     <li>
-                      <a href="{% url 'createlanding' %}">Услуга 2</a>
+                      <a href="{% url 'createlanding' %}">Маркетинг и Продвижение</a>
                     </li>
-                    <li>
-                      <a href="{% url 'createlanding' %}">Услуга 3</a>
-                    </li>
-                    <li>
-                      <a href="{% url 'createlanding' %}">Услуга 4</a>
-                    </li>
+{#                    <li>#}
+{#                      <a href="{% url 'createlanding' %}">Услуга 3</a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                      <a href="{% url 'createlanding' %}">Услуга 4</a>#}
+{#                    </li>#}
 
                   </ul>
                 </li>
