--- a/static/css/style7.css
+++ b/static/css/style7.css
@@ -520,7 +520,7 @@ section.page-title .bp-desktop({
   left: 0;
   width: 100%;
   height: 130%;
-  height: calc(100% + 30vh);
+  /*height: calc(100% + 30vh);*/
 }
 .row-parallax-bg .parallax-wrapper .parallax-bg {
   background-size: cover;
