--- a/templates/pages/landing.html
+++ b/templates/pages/landing.html
@@ -75,7 +75,7 @@
 
         </div>
            <section class="split-section">
-        <div class="container-lg side-background">
+        <div class="side-background">
           <div class="col-md-6 col-sm-4 img-side img-right">
             <div class="img-holder">
               <img class="bg-img" src="{% static 'images/bg-image-30.jpg' %}" alt="">
