--- a/templates/footer.html
+++ b/templates/footer.html
@@ -23,24 +23,24 @@
               <div class="col-sm-4">
                 <div class="icon-box align-center"><i class="hc-pin"></i>
                   <div class="ib-content">
-                    <h4 class="upper">Visit Us</h4>
-                    <p>An ispiring place for you.</p><a class="arrow-link" href="#">Open Map</a>
+
+                 <a style="margin-left: 15px" class="arrow-link" href="{% url 'contacts' %}">Есть вопрос?</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="icon-box align-center"><i class="hc-calendar"></i>
                   <div class="ib-content">
-                    <h4 class="upper">Book a Session</h4>
-                    <p>The first session is free.</p><a class="arrow-link" href="#">Book Now</a>
+
+                   <a style="margin-left: 15px" class="arrow-link" href="#">Наши документы</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="icon-box align-center"><i class="hc-help-buoy"></i>
                   <div class="ib-content">
-                    <h4 class="upper">Any Question?</h4>
-                    <p>Contact our customer support.</p><a class="arrow-link" href="#">Send Email</a>
+
+                   <a style="margin-left: 15px" class="arrow-link" href="{% url 'about' %}">О нас</a>
                   </div>
                 </div>
               </div>
