--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -70,8 +70,7 @@
       </section>
      <div class="row">
             <div class="col-md-12 ">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6f3c27a22f25c9f458862481e3d9e098fc72515da61a7bc2719eff1c9a4e1714&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-            </div>
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6d0b9279520623ab60cdc1ab40bf70578e2b84d21e1551a19547f2114758a4bf&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script></div>
      </div>
       {% include 'pages/callback_form.html' %}
 
