--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -28,23 +28,23 @@
       <section class="section">
         <div class="container">
           <div class="title text-center">
-
-            <h2 class="our-dark-blue">Как мы работаем?</h2>
+            <h2 >Как мы работаем?</h2>
+            <hr>
           </div>
           <div class="section-content pt-25 pb-25">
             <div class="row">
               <div class="col-md-4">
                 <div class="icon-box align-center">
-                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/1.svg' %} " data-gradients="#ff795f,#ce1768"></div>
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/money.svg' %} " data-gradients="#ff795f,#ce1768"></div>
                   <div class="ib-content">
                     <h4>Оплата после результата</h4>
-                    <p>Мы считаем, что доверие клиента нужно заслуживать! Процесс разработки делится на несколько этапов, и мы берем предоплату только после первого этапа, когда клиент уже увидел первые результаты нашего труда.</p>
+                    <p>Берем предоплату после первого этапа, когда вы видите первые результаты нашей работы</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="icon-box align-center">
-                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/2.svg' %}" data-gradients="#ff795f,#ce1768"></div>
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/support.svg' %}" data-gradients="#ff795f,#ce1768"></div>
                   <div class="ib-content">
                     <h4>Поддержка клиентов 24\7</h4>
                     <p>Мы оказываем услугу поддержки и отвечаем за работоспособность и безотказность наших продуктов 24\7</p>
@@ -53,10 +53,39 @@
               </div>
               <div class="col-md-4">
                 <div class="icon-box align-center">
-                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/3.svg' %}" data-gradients="#ff795f,#ce1768"></div>
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/list.svg' %}" data-gradients="#ff795f,#ce1768"></div>
                   <div class="ib-content">
                     <h4>До полного утверждения</h4>
-                    <p>Мы вносим неограниченное количество правок и доработок, пока клиент не будет доволен на 100% полученным результатом</p>
+                    <p>Неограниченное количество правок и доработок, пока клиент не будет доволен на все 100%</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+                  <div class="row">
+              <div class="col-md-4">
+                <div class="icon-box align-center">
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/coding.svg' %} " data-gradients="#ff795f,#ce1768"></div>
+                  <div class="ib-content">
+                    <h4>Прозрачная разработка</h4>
+                    <p>Вы контролируете все этапы разработки, чтобы проект развивался по вашему усмотрению</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="icon-box align-center">
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/defence.svg' %}" data-gradients="#ff795f,#ce1768"></div>
+                  <div class="ib-content">
+                    <h4>Защита Данных</h4>
+                    <p>Наши проекты имеют шифрование данных и запросов, а так же защиту от всевозможных внешних атак</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="icon-box align-center">
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/creative.svg' %}" data-gradients="#ff795f,#ce1768"></div>
+                  <div class="ib-content">
+                    <h4>Проекты любой сложности</h4>
+                    <p>У вас необычная идея? Сложный проект? Мы с радостью поможем вам реализовать ваши мечты!</p>
                   </div>
                 </div>
               </div>
@@ -120,9 +149,10 @@
         </section>
       <section class="section " >
         <div class="container mb-50">
-          <div class="title text-center">
+          <div class="title text-center mb-20">
 
                     <h2 class="our-dark-blue">Наши последние работы</h2>
+              <hr>
                   </div>
 
         </div>
