--- a/templates/pages/landing.html
+++ b/templates/pages/landing.html
@@ -121,34 +121,45 @@
             <div class="container">
                 <div class="title text-center">
 
-                    <h2 class="our-dark-blue">Наши последние работы</h2>
+                    <h2 class="our-dark-blue">Этапы Разработки Сайта</h2>
                   </div>
-                <div class="row pt-25 pb-25">
-                    <div class="col-md-8 col-md-offset-2">
-                        <ul class="nav nav-tabs icon-tabs center-tabs cols-4">
-                            <li class="active"><a href="#tab-1" data-toggle="tab"><i class="hc-todo"></i></a>
+                <div class="row pt-25 ">
+                    <div class="col-md-10 col-md-offset-1">
+                        <ul class="nav nav-tabs icon-tabs center-tabs cols-1">
+                            <li class="tab-1-tab active"><a href="#tab-1" data-toggle="tab"><span class="tab-1-icon"></span></a>
                             </li>
-                            <li><a href="#tab-2" data-toggle="tab"><i class="hc-brush"></i></a>
+                            <li class="tab-2-tab"><a href="#tab-2" data-toggle="tab"><span class="tab-2-icon"></span></a>
+                            </li >
+                            <li class="tab-3-tab"><a href="#tab-3" data-toggle="tab"><span class="tab-3-icon"></span></a>
                             </li>
-                            <li><a href="#tab-3" data-toggle="tab"><i class="hc-server-cloud"></i></a>
+                            <li class="tab-4-tab"><a href="#tab-4" data-toggle="tab"><span class="tab-4-icon"></span></a>
                             </li>
-                            <li><a href="#tab-4" data-toggle="tab"><i class="hc-color-filter"></i></a>
+                             <li class="tab-5-tab"><a href="#tab-5" data-toggle="tab"><span class="tab-5-icon"></span></a>
                             </li>
                         </ul>
                         <div class="tab-content text-center">
                             <div class="tab-pane fade active in" id="tab-1">
+                                <h2>Бриф</h2>
                                 <p>Expqedita minima fugiat ea maiores itaque natus animi officia iure deleniti unde, facilis velit optio! Culpa quis neque tempora deleniti assumenda aperiam. Ex reiciendis nobis qui laboriosam a sit accusantium vitae magni facilis eum possimus
                                     quaerat sed dolor, modi aut similique.</p>
                             </div>
                             <div class="tab-pane fade" id="tab-2">
+                                <h2>Составление ТЗ</h2>
                                 <p>Itwaque omnis tenetur placeat facere mollitia molestias, doloribus pariatur sapiente qui hic laboriosam aut accusamus repellat ab perspiciatis commodi voluptates corporis, consequatur! At consequatur, quos reiciendis accusamus aperiam
                                     ipsum ex autem odio possimus.</p>
                             </div>
                             <div class="tab-pane fade" id="tab-3">
+                                <h2>FrontEnd</h2>
                                 <p>Eligwendi dolorem repellat, officiis nobis. Itaque repudiandae, eligendi totam nihil aliquid, vitae quos cum minus nulla autem, in? Temporibus, accusantium. Laborum, asperiores. A dolores eaque, cupiditate eius quae expedita magni optio,
                                     at quaerat ipsa assumenda!</p>
                             </div>
                             <div class="tab-pane fade" id="tab-4">
+                                <h2> BackEnd</h2>
+                                <p>Venidam culpa doloremque hic deleniti eius architecto at corrupti ea fuga reprehenderit rem, recusandae quasi nisi, corporis, assumenda aliquam optio adipisci dolores. Necessitatibus nesciunt quidem ducimus in qui neque natus veritatis
+                                    vero iure recusandae impedit.</p>
+                            </div>
+                             <div class="tab-pane fade" id="tab-5">
+                                <h2>Production</h2>
                                 <p>Venidam culpa doloremque hic deleniti eius architecto at corrupti ea fuga reprehenderit rem, recusandae quasi nisi, corporis, assumenda aliquam optio adipisci dolores. Necessitatibus nesciunt quidem ducimus in qui neque natus veritatis
                                     vero iure recusandae impedit.</p>
                             </div>
@@ -159,12 +170,9 @@
         </section>
         <section>
             <div class="container">
-               <div class="title text-center">
 
-                    <h2 class="our-dark-blue">Наши последние работы</h2>
-                  </div>
-                <div class="row pt-25 pb-25">
-                    <div class="col-md-3 col-sm-6">
+                <div class="row  pb-25">
+                    <div class="col-md-3 col-xs-6 ">
                         <div class="icon-box boxed-style">
                             <div class="animated-icon colored" data-icon="{% static 'images/icons/server.svg' %}"></div>
                             <div class="ib-content">
@@ -173,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-xs-6">
                         <div class="icon-box boxed-style">
                             <div class="animated-icon colored" data-icon="{% static 'images/icons/cards-diamonds.svg' %}"></div>
                             <div class="ib-content">
@@ -182,7 +190,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-xs-6">
                         <div class="icon-box boxed-style">
                             <div class="animated-icon colored" data-icon="{% static 'images/icons/display.svg' %}"></div>
                             <div class="ib-content">
@@ -191,7 +199,43 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-3 col-xs-6">
+                        <div class="icon-box boxed-style">
+                            <div class="animated-icon colored" data-icon="{% static 'images/icons/graph-2.svg' %}"></div>
+                            <div class="ib-content">
+                                <h4>Growth Equity</h4>
+                                <p>Donec vestibulum velit a dolor volutpat ornare. Mauris in turpis est. Vivamus tempus lorem nec.</p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-md-3 col-xs-6">
+                        <div class="icon-box boxed-style">
+                            <div class="animated-icon colored" data-icon="{% static 'images/icons/server.svg' %}"></div>
+                            <div class="ib-content">
+                                <h4>Private Equity</h4>
+                                <p>Donec vestibulum velit a dolor volutpat ornare. Mauris in turpis est. Vivamus tempus lorem nec.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="icon-box boxed-style">
+                            <div class="animated-icon colored" data-icon="{% static 'images/icons/cards-diamonds.svg' %}"></div>
+                            <div class="ib-content">
+                                <h4>Premium Consulting</h4>
+                                <p>Donec vestibulum velit a dolor volutpat ornare. Mauris in turpis est. Vivamus tempus lorem nec.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="icon-box boxed-style">
+                            <div class="animated-icon colored" data-icon="{% static 'images/icons/display.svg' %}"></div>
+                            <div class="ib-content">
+                                <h4>Targeted Sourcing</h4>
+                                <p>Donec vestibulum velit a dolor volutpat ornare. Mauris in turpis est. Vivamus tempus lorem nec.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
                         <div class="icon-box boxed-style">
                             <div class="animated-icon colored" data-icon="{% static 'images/icons/graph-2.svg' %}"></div>
                             <div class="ib-content">
